# browser-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  browser-handoff-standalone-service-plan.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
browser_handoff_service/: __init__.py  main.py  models.py  registry.py  runtime.py  security.py  transitions.py  ucp.py
playwright-tests/: handoff-ui.spec.js  handover-ui.spec.js
scripts/: agent_client_smoke.py  install_system_deps.sh
tests/: conftest.py  test_agent_commands_extended.py  test_api_agent_client.py  test_api_auth.py  test_error_logging.py  test_form_factor.py  test_health.py  test_navigation_race.py  test_real_runtime_optional.py  test_safe_title.py  test_state_and_security.py  test_ucp.py  test_user_ui_e2e.py
