[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-handoff-service"
version = "0.1.0"
description = "Standalone browser handoff service MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "websockets>=13.0",
  "rebrowser-playwright>=1.52.0",
  "Jinja2>=3.1.0",
  "PyJWT[crypto]>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "playwright==1.52.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pre-commit>=4.0.0",
  "ruff>=0.14.0",
  "ty>=0.0.1a22",
  "playwright==1.52.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["browser_handoff_service", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017"]

[tool.ty.environment]
python-version = "3.12"
root = ["."]

[tool.ty.src]
include = ["browser_handoff_service", "scripts", "tests"]

[tool.setuptools.packages.find]
include = ["browser_handoff_service*"]
